--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,6 @@
 {
     "type": "mysql",
-    "host": "db",
+    "host": "localhost",
     "port": 3306,
     "username": "root",
     "password": "root",
