--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,15 @@
 {
-    "type": "mysql",
-    "host": "localhost",
-    "port": 3306,
-    "username": "root",
-    "password": "root",
-    "database": "nest",
-    "entities": ["dist/**/*.entity{.ts,.js}"],
-    "synchronize": true
+  "type": "mysql",
+  "host": "db",
+  "port": 3306,
+  "username": "root",
+  "password": "root",
+  "database": "nest",
+  "entities": [
+    "/usr/src/app/dist/**/**/*entity{.ts,.js}"
+  ],
+  "autoLoadEntities": true,
+  "synchronize": true,
+  "logging": true,
+  "logger": "file"
 }
