--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     db:
         image: mysql:5.7
         container_name: db-mysql
+        platform: linux/amd64
         ports:
             - 3306:3306
         expose:
